kubernetes/kube-system/cilium/netpols/backend-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: backend-netpol
  namespace: app
spec:
  endpointSelector:
    matchLabels:
      app: backend
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toServices:
    - k8sService:
        serviceName: database-cluster-r
        namespace: database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toServices:
    - k8sService:
        serviceName: database-cluster-ro
        namespace: database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toServices:
    - k8sService:
        serviceName: database-cluster-rw
        namespace: database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP

  - toServices:
    - k8sService:
        serviceName: dragonfly
        namespace: dragonfly
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
