kubernetes/kube-system/cilium/netpols/database-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: database-netpol
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: database-cluster
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: app
        app: backend
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cnpg-system
        app.kubernetes.io/name: cloudnative-pg
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
      - port: "8000" 
        protocol: TCP
