kubernetes/kube-system/cilium/netpols/frontend-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: frontend-netpol
  namespace: app
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toServices:
    - k8sService:
        serviceName: backend
        namespace: app
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
